# JKQC

./: .gitignore  JKQCpickle.py  README.md  pyproject.toml
src/JKQC.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/jkqc/: JKQC.py
