[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "JKQC"       
version = "0.1.0"
description = "Jammy Key for Quantum Chemistry"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0 license" }    # or another license
authors = [
  { name = "Jakub Kubecka", email = "akcebukbukaj@gmail.com" }
]
dependencies = []

[project.scripts]
JKQC = "JKQC.main:main"

[tool.setuptools.packages.find]
where = ["src"]
